# mps

./: Contents  LICENSE  Makefile.am  Makefile.in  README.md  config.h.in  configure  configure.ac
conf/: Contents  gateway.cf  gateway.cf-example  icu-normalizer.cf  search.cf  search.cf-example
doc/: Contents
doc/mps/: index-stream.txt  search-formats.txt
scripts/: Contents  UpdateHciBib.pl  UpdateOmim.pl  createScriptFromLog.pl  mpsFileDeleter.pl  mpsLogReport.pl  mpsLogRollover.sh  mpsgateway.sh  mpsserver.sh
src/: Contents  Makefile.am  Makefile.in
src/clients/: Contents  Makefile.am  Makefile.in
src/clients/lwps/: Contents  Makefile.am  Makefile.in  lscript.c  lsearch.c  ltrec.c
src/clients/spi/: Contents  Makefile.am  Makefile.in  spiscript.c  spisearch.c  spitrec.c
src/gateway/: Contents  Makefile.am  Makefile.in  gateway.c
src/language/: Contents  Makefile.am  Makefile.in  case.c  case.h  charset.h  convert.c  convert.h  language.c  language.h  lng.h  lng_err.h  location.c  location.h  metaphone.c  metaphone.h  phonix.c  phonix.h  soundex.c  soundex.h  stemmer.c  stemmer.h  stoplist.c  stoplist.h  tokenizer.c  tokenizer.h  typo.c  typo.h  unicode.c  unicode.h
src/language/icu/: Contents  IcuErr.h  IcuUnicodeNormalizer.cpp  IcuUnicodeNormalizer.h  IcuUtils.cpp  IcuUtils.h  IcuWrappers.cpp  IcuWrappers.h  Makefile.am  Makefile.in
src/misc/: Contents  Makefile.am  Makefile.in  defazio.c  machenv.c  parser.c  verify.c
src/parsers/: Contents  Makefile.am  Makefile.in  functions.c  functions.h  mpsparser.c  parser.c  parser.h
src/protocols/: Contents  Makefile.am  Makefile.in
src/protocols/lwps/: Contents  Makefile.am  Makefile.in  lwps.c  lwps.h
src/report/: Contents  Makefile.am  Makefile.in  rep.h  report.c  report.h
src/search/: Contents  Makefile.am  Makefile.in  bitmap.c  bitmap.h  cache.c  cache.h  document.c  document.h  feedback.c  feedback.h  filepaths.c  filepaths.h  filter.c  filter.h  index.c  index.h  indexer.c  indexer.h  info.c  info.h  invert.c  invert.h  keydict.c  keydict.h  language.c  language.h  mpsindexer.c  mpsphrases.c  mpsterms.c  parser.c  parser.h  posting.c  posting.h  report.c  report.h  retrieval.c  retrieval.h  search.c  search.h  (+19 more)
src/server/: Contents  Makefile.am  Makefile.in  server.c  server.h  srvr_http.c  srvr_http.h  srvr_lwps.c  srvr_lwps.h
src/spi/: Contents  Makefile.am  Makefile.in  spi.c  spi.h
src/utils/: Contents  Makefile.am  Makefile.in  alloc.c  alloc.h  args.c  args.h  bitmap.h  config.c  config.h  cwrappers.c  cwrappers.h  data.c  data.h  date.c  date.h  debug.h  dict.c  dict.h  file.c  file.h  hash.c  hash.h  load.c  load.h  log.c  log.h  macros.h  mem.c  mem.h  net.c  net.h  num.c  num.h  posix.c  posix.h  rand.c  rand.h  sha1.c  sha1.h  (+17 more)
test-scripts/: Contents  sample.lscript  sample.repscript  sample.spiscript
