
#*****************************************************************************
#       Copyright (C) 1993-2010, FS Consulting LLC. All rights reserved      *
#                                                                            *
#  This notice is intended as a precaution against inadvertent publication   *
#  and does not constitute an admission or acknowledgement that publication  *
#  has occurred or constitute a waiver of confidentiality.                   *
#                                                                            *
#  This software is the proprietary and confidential property                *
#  of FS Consulting LLC.                                                     *
#*****************************************************************************


# Subdirectories
SUBDIRS=src



# Extras to distribute
EXTRA_DIST=Contents \
        conf/Contents \
        conf/search.cf conf/gateway.cf \
        conf/icu-normalizer.cf \
        scripts/Contents \
        scripts/CacheCleaner.pl scripts/CreateSpiscriptFromLog.pl scripts/LogReport.pl \
        scripts/LogRollover.sh \
        scripts/mpsgateway scripts/mpsserver \
        scripts/UpdateHciBib.pl scripts/UpdateOmim.pl \
        test-scripts/Contents \
        test-scripts/direct-mpsgateway.sh test-scripts/direct-mpsserver.sh \
        test-scripts/mps.php \
        test-scripts/sample.lscript test-scripts/sample.repscript test-scripts/sample.spiscript \
        doc/Contents \
        doc/mps/index-stream.txt doc/mps/search-formats.txt



# Clean
clean-local:
    rm -rf $(CLEAN_LOCAL)
