
#*****************************************************************************
#       Copyright (C) 1993-2011, FS Consulting LLC. All rights reserved      *
#                                                                            *
#  This notice is intended as a precaution against inadvertent publication   *
#  and does not constitute an admission or acknowledgement that publication  *
#  has occurred or constitute a waiver of confidentiality.                   *
#                                                                            *
#  This software is the proprietary and confidential property                *
#  of FS Consulting LLC.                                                     *
#*****************************************************************************


# Libraries
lib_LIBRARIES = libutils.a


# Utils library
libutils_a_SOURCES = alloc.c alloc.h \
    args.c args.h \
    bitmap.h \
    config.c config.h \
    cwrappers.c cwrappers.h \
    data.c data.h \
    date.c date.h \
    debug.h \
    dict.c dict.h \
    file.c file.h \
    hash.c hash.h \
    load.c load.h \
    log.c log.h \
    macros.h \
    mem.c mem.h \
    net.c net.h \
    num.c num.h \
    posix.c posix.h \
    rand.c rand.h \
    sha1.c sha1.h \
    signals.c signals.h \
    socket.c socket.h \
    strbuf.c strbuf.h \
    strings.c strings.h \
    table.c table.h \
    trie.c trie.h \
    types.h \
    utils_err.h \
    utils.h \
    version.c version.h


# Extras to distribute
EXTRA_DIST=Contents



# Clean
clean-local:
    rm -rf $(CLEAN_LOCAL)

